add infinite scroll in controller

--- a/src/modules/app/foo/templates/photoList.html
+++ b/src/modules/app/foo/templates/photoList.html
@@ -1,6 +1,6 @@
 <div class = "photo-list">
 	<h1> photo list </h1>
 	<div class = "photo-album">
-		<card ng-repeat="photo in photoListCtrl.photoList" album-ref = "true" item = "photo"></card>
+		<card  ng-repeat="photo in photoListCtrl.photoListScroll" album-ref = "true" item = "photo"></card>
 	</div>
 </div>
